wip: initialize angular project
Updates dependencies and removes AI module
Updates various Angular and related dependencies to their latest versions, including Angular Core, CLI, and ESLint.
Replaces `@primeng/themes` with `@primeuix/themes`.
Adds `msw` as a dependency.
Removes the AI module and its associated files to streamline the project.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@ngrx/store-devtools": "^20.0.0",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
-    "@primeng/themes": "^20.0.1",
+    "@primeuix/themes": "^1.2.3",
     "@redux-devtools/extension": "^3.3.0",
     "@tailwindcss/postcss": "^4.1.11",
     "chart.js": "^4.5.0",
@@ -40,6 +40,7 @@
     "deepmerge-ts": "^7.1.5",
     "express": "^5.1.0",
     "marked": "^16.1.2",
+    "msw": "^2.10.4",
     "ngrx-store-localstorage": "^20.0.0",
     "ngx-translate-multi-http-loader": "^20.0.0",
     "primeicons": "^7.0.0",
@@ -85,5 +86,28 @@
   "lint-staged": {
     "*.ts": "eslint --cache --fix",
     "*.{ts,css,scss,html,json,md}": "prettier --write"
+  },
+  "overrides": {
+    "@ngrx/effects": {
+      "@angular/common": "$@angular/common",
+      "@angular/core": "$@angular/core"
+    },
+    "@ngrx/store": {
+      "@angular/common": "$@angular/common",
+      "@angular/core": "$@angular/core"
+    },
+    "@ngrx/store-devtools": {
+      "@angular/common": "$@angular/common",
+      "@angular/core": "$@angular/core"
+    },
+    "ngrx-store-localstorage": {
+      "@angular/common": "$@angular/common",
+      "@angular/core": "$@angular/core"
+    }
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
